# wordhelp

./: README.md  define_word.py  pyproject.toml  requirements.txt  test_define_word.py
.github/workflows/: full-scan.yml  python-app.yml
