[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordhelp"
version = "0.1.0"
description = "Definitions/Synonyms of Clipboard Words."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Yusuf Haydar" },
]
maintainers = [
    { name = "Yusuf Haydar" },
]
keywords = ["python", "dictionary", "clipboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]

[project.scripts]
my-command = "my_project.cli:main"
